Changes in Generator order management